--- a/DJITracking/app/src/main/res/values/styles.xml
+++ b/DJITracking/app/src/main/res/values/styles.xml
@@ -1,12 +1,6 @@
 <resources>
-
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-    </style>
+    <style name="AppTheme" parent="@style/Theme.AppCompat.Light.NoActionBar" />
 
     <!--Separator-->
     <style name="dividerBase">
@@ -23,5 +17,4 @@
         <item name="android:layout_height">match_parent</item>
     </style>
     <!--Separator-->
-
 </resources>
