[Add] Getting camera settings. Attempt to implement decoding using Android SDK.

--- a/DJIVideoStreamAnalysis/app/src/main/res/values/colors.xml
+++ b/DJIVideoStreamAnalysis/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="colorBlack">#ff000000</color>
     <color name="colorWhite">#FFFFFF</color>
 
+    <color name="uiTextColor">@color/colorPrimary</color>
     <color name="button_normal">#50808080</color>
     <color name="button_press">#5086BFFF</color>
 </resources>
