--- a/DJIVideoStreamAnalysis/app/src/main/res/layout/activity_app_registration.xml
+++ b/DJIVideoStreamAnalysis/app/src/main/res/layout/activity_app_registration.xml
@@ -46,7 +46,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_margin="4dp"
             android:text="@string/ui_btn_open_video_stream_activity"
-            android:textColor="@color/colorWhite"
+            android:textColor="@color/uiTextColor"
             android:textSize="16sp" />
     </LinearLayout>
 
