[Change] DJI SDK Version was changed from 4.5.1 to 4.7.1. App registration process was slightly changed according to new SDK version.

--- a/DJIVideoStreamAnalysis/app/src/main/res/layout/activity_app_registration.xml
+++ b/DJIVideoStreamAnalysis/app/src/main/res/layout/activity_app_registration.xml
@@ -48,6 +48,16 @@
             android:text="@string/ui_btn_open_video_stream_activity"
             android:textColor="@color/uiTextColor"
             android:textSize="16sp" />
+
+        <Button
+            android:id="@+id/btn_open_test"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="4dp"
+            android:text="Test"
+            android:textColor="@color/uiTextColor"
+            android:textSize="16sp" />
     </LinearLayout>
 
     <TextView
